feat: implementando o Login e JWT Token no projeto